# scalable-performance-dashboard

./: .gitignore  CLAUDE.md  How to install.html  LICENSE  README.md  Run Dashboard.bat  Run Dashboard.command  Setup.bat  Setup.command  pyproject.toml  run.py
assets/: animations.js  styles.css
dashboard/: app.py  benchmark.py  data_loader.py  gettex_history.py  historical_prices.py  open_browser.py  performance.py  portfolio.py  prices.py  scalable_api.py  state.py
